@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Write when an item is glowing.
+ common/item.c: add "glowing" to glowing items.
+ types/legacy/legacy_describe.c: LAMP have some description, too.
+Nicolas Weeger 2007-08-20
+
 Fix item update on ground. Factorize code. Add increase_ob_nr() function.
  include/libproto.h
  common/object.c
